@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.65 2008-06-20 17:31:48 nicm Exp $
+# $Id: Makefile,v 1.66 2008-06-23 22:24:16 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -32,6 +32,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-kill-server.c cmd-set-window-option.c cmd-show-options.c \
       cmd-show-window-options.c cmd-command-prompt.c cmd-set-buffer.c \
       cmd-show-buffer.c cmd-list-buffers.c cmd-delete-buffer.c \
+      cmd-list-commands.c \
       window-scroll.c window-more.c window-copy.c options.c paste.c \
       tty.c tty-keys.c tty-write.c screen-write.c screen-redraw.c
 
